--- a/.github/workflows/zap-admin-adduser.yml
+++ b/.github/workflows/zap-admin-adduser.yml
@@ -1,41 +1,42 @@
 name: ZAP DAST - Admin AddUser (Working Token)
 
 on:
-  push:
-    paths:
-      - 'zap/api/openapi.yaml'
-      - 'zap/scripts/add-auth-header.py'
   workflow_dispatch:
 
 jobs:
   zap-scan:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: ZAP API Scan with Fixed Token
+      - name: Create results directory
+        run: mkdir -p zap/results
+
+      - name: Run ZAP Scan
         run: |
-          # Create results folder in your repo (host side)
-          mkdir -p zap/results
-
-          # Run ZAP scan inside Docker
-          docker run --rm -v ${{ github.workspace }}:/zap/wrk/:rw \
+          docker run --rm \
+            -v $(pwd)/zap/results:/zap/wrk \
             ghcr.io/zaproxy/zaproxy:stable \
-            sh -c "chown -R zap:zap /zap/wrk/zap/results && \
-                   zap-api-scan.py \
-                     -t /zap/wrk/zap/api/openapi.yaml \
-                     -f openapi \
-                     -a \
-                     --hook=/zap/wrk/zap/scripts/add-auth-header.py \
-                     -r /zap/wrk/zap/results/report_html.html \
-                     -J /zap/wrk/zap/results/report_json.json"
+            zap-full-scan.py \
+            -t "https://example.com/api/admin/addUser" \
+            -r report_html.html \
+            -J report_json.json \
+            -z "-config replacer.full_list(0).description=auth \
+                -config replacer.full_list(0).enabled=true \
+                -config replacer.full_list(0).matchtype=REQ_HEADER \
+                -config replacer.full_list(0).matchstr=Authorization \
+                -config replacer.full_list(0).regex=false \
+                -config replacer.full_list(0).replacement=Bearer YOUR_TOKEN"
 
-      - name: Upload Report
-        if: always()
+      - name: Move reports to correct folder
+        run: |
+          mv report_html.html zap/results/ || true
+          mv report_json.json zap/results/ || true
+
+      - name: Upload ZAP Reports
         uses: actions/upload-artifact@v4
         with:
-          name: zap-admin-adduser-report
-          path: |
-            zap/results/report_html.html
-            zap/results/report_json.json
+          name: zap-report
+          path: zap/results/
